Adjusted code to begin showing results on page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <script src="javascript.js" defer></script>
+  <title>Rock Paper Scissors</title>
 </head>
 <body>
-  <script src="javascript.js"></script>
+  <button id="rockBtn">Rock</button>
+  <button id="paperBtn">Paper</button>
+  <button id="scissorsBtn">Scissors</button>
+  <div id="container">
+    <div id="score-display">
+      <h2>SCORE</h2>
+    </div>
+    <div id="results-display">
+      <h2>RESULTS</h2>
+    </div>
+  </div>
 </body>
 </html>
