Finished barebones UI for rock paper scissors

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <div id="container">
     <div id="score-display">
       <h2>SCORE</h2>
+      <h3 id="player-score">Player: </h3>
+      <h3 id="computer-score">Computer: </h3>
     </div>
     <div id="results-display">
       <h2>RESULTS</h2>
